[gd_scene load_steps=21 format=3 uid="uid://ci36jx3vvoocj"]

[ext_resource type="Script" uid="uid://dqlqlkjg6tqvc" path="res://ennemies/_generics/ennemy.gd" id="1_qdj7r"]
[ext_resource type="PackedScene" uid="uid://bkh37y1i8fjjq" path="res://effects/visual_effects_holder.tscn" id="2_ce5i1"]
[ext_resource type="Texture2D" uid="uid://dwuk1wotf6y50" path="res://assets/sprites/shadow.png" id="2_hl8ed"]
[ext_resource type="Material" uid="uid://bh0tpbtkpmuga" path="res://effects/gore_death_effect.tres" id="3_i4bwu"]
[ext_resource type="Texture2D" uid="uid://bvkjjs72fxg4x" path="res://assets/sprites/ennemies/mob-1-dead.png" id="3_qem7r"]
[ext_resource type="Texture2D" uid="uid://bceetuo4sphb" path="res://assets/sprites/ennemies/mob-1-hurt.png" id="4_yy3p0"]
[ext_resource type="Texture2D" uid="uid://curemujf2tqhp" path="res://assets/sprites/ennemies/mob-1-walk.png" id="5_grokr"]
[ext_resource type="PackedScene" uid="uid://cl0vk4malih5v" path="res://ui/in-game/components/health_bar.tscn" id="6_o0wmw"]
[ext_resource type="PackedScene" uid="uid://dde4kdtsev4lf" path="res://ui/in-game/components/location_marker.tscn" id="9_elh1f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_45qg2"]
atlas = ExtResource("3_qem7r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiurt"]
atlas = ExtResource("4_yy3p0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahbay"]
atlas = ExtResource("4_yy3p0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mska"]
atlas = ExtResource("5_grokr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_brvno"]
atlas = ExtResource("5_grokr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyjhj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45qg2")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiurt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahbay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiurt")
}],
"loop": false,
"name": &"hurt",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mska")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brvno")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a4ja4"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gicfc"]
radius = 17.0

[sub_resource type="Animation" id="Animation_2yt3l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.196078)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_kedgy"]
resource_name = "fade_away"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_emfb7"]
_data = {
&"RESET": SubResource("Animation_2yt3l"),
&"fade_away": SubResource("Animation_kedgy")
}

[node name="Ennemy" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
collision_layer = 130
collision_mask = 14
script = ExtResource("1_qdj7r")

[node name="Effects" parent="." instance=ExtResource("2_ce5i1")]
unique_name_in_owner = true
z_as_relative = false

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -10)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_hl8ed")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_as_relative = false
y_sort_enabled = true
material = ExtResource("3_i4bwu")
position = Vector2(0, -16)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_cyjhj")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.0701159

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_a4ja4")

[node name="Health" parent="." instance=ExtResource("6_o0wmw")]
unique_name_in_owner = true
light_mask = 0
z_index = 4096
position = Vector2(0, -46)
max_health = 3.0
current_health = 3.0

[node name="LocationMarker" parent="." instance=ExtResource("9_elh1f")]
visible = false
position = Vector2(0, 5.5)
color = 2
opacity = 0.5
sprite_scale = 2.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_gicfc")
debug_color = Color(0.838792, 0.353043, 0.410436, 0.42)

[node name="DamageAnchor" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -49)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_emfb7")
}

[node name="Timers" type="Node" parent="."]

[node name="BurnTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="BurnTickTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="DamageSpawnTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[connection signal="depleted" from="Health" to="." method="_on_health_depleted"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timers/BurnTimer" to="." method="_on_burn_timer_timeout"]
[connection signal="timeout" from="Timers/BurnTickTimer" to="." method="_on_burn_tick_timer_timeout"]
